<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="?attr/android:colorBackground"
        tools:context=".fragments.FragmentHome">
        
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/search_input_layout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="4dp"

                app:hintEnabled="false"
                app:startIconDrawable="@drawable/ic_search"
                app:boxCornerRadiusTopStart="28dp"
                app:boxCornerRadiusBottomStart="28dp"
                app:boxCornerRadiusTopEnd="28dp"
                app:boxCornerRadiusBottomEnd="28dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/search_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/home_search_bar_hint"
                        android:background="@null"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:paddingBottom="80dp"
            android:clipToPadding="false" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/empty_state_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:visibility="gone">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/empty_state_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/home_empty_list_title">
                </TextView>
                <TextView
                    android:id="@+id/empty_state_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textAlignment="center"
                    android:text="@string/home_empty_list_message">
                </TextView>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:backgroundTint="?attr/colorPrimaryContainer"
            android:tint="?attr/colorOnPrimaryContainer"

            android:contentDescription="@string/app_name"
            android:src="@drawable/add">
        </com.google.android.material.floatingactionbutton.FloatingActionButton>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>